modified:   coffee-and-tea.yaml

--- a/postgres.yaml
+++ b/postgres.yaml
@@ -4,7 +4,7 @@ metadata:
   name: postgres-db
 spec:
   serviceName: postgres
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: postgres
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:17
+        image: midzaru2011/postgres:17
         env:
         - name: POSTGRES_DB
           value: "CoffeeAndTea"
