--- a/coffee-and-tea.yaml
+++ b/coffee-and-tea.yaml
@@ -1,3 +1,22 @@
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: coffee-and-tea-config
+data:
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://158.160.101.226:5432/CoffeeAndTea"
+  SPRING_DATASOURCE_USERNAME: "sasha"
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: db-secret
+type: Opaque
+data:
+  POSTGRES_PASSWORD: cGFzc3dvcmQ= # Base64-кодированный пароль ("password")
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,11 +47,12 @@ spec:
               key: SPRING_DATASOURCE_USERNAME
         - name: SPRING_DATASOURCE_PASSWORD
           valueFrom:
-            secretKeyRef: # Если пароль хранится в Secret
+            secretKeyRef:
               name: db-secret
               key: POSTGRES_PASSWORD
         ports:
         - containerPort: 8081
+
 ---
 apiVersion: v1
 kind: Service
@@ -45,4 +65,4 @@ spec:
   ports:
   - port: 8081
     targetPort: 8081
-#
+
