--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            coffee-and-tea-app:${{ env.version }}
-            coffee-and-tea-app:latest
+            midzaru2011/coffee-and-tea-app:${{ env.version }}
+            midzaru2011/coffee-and-tea-app:latest
