--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,26 @@ jobs:
         id: version
         run: echo "version=$(cat VERSION | tr -d '[:space:]')" >> $GITHUB_ENV
 
+      # Шаг 3: Проверка существования тега в Docker Hub
+      - name: Check if tag exists in Docker Hub
+        id: check-tag
+        run: |
+          DOCKER_HUB_REPO="your-dockerhub-username/your-repo-name"
+          TAG="${{ env.version }}"
+          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" "https://hub.docker.com/v2/repositories/$DOCKER_HUB_REPO/tags/$TAG/")
+          if [ "$RESPONSE" == "200" ]; then
+            echo "Tag $TAG already exists in Docker Hub. Skipping build."
+            echo "tag_exists=true" >> $GITHUB_ENV
+          else
+            echo "Tag $TAG does not exist in Docker Hub. Proceeding with build."
+            echo "tag_exists=false" >> $GITHUB_ENV
+          fi
+
+      # Шаг 4: Прерывание, если тег уже существует
+      - name: Skip build if tag exists
+        if: env.tag_exists == 'true'
+        run: exit 0
+
       # Шаг 3: Логин в Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -37,4 +57,3 @@ jobs:
           push: true
           tags: |
             midzaru2011/coffee-and-tea-app:${{ env.version }}
-            midzaru2011/coffee-and-tea-app:latest
