--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,4 +4,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/002-insert-data.yaml
   - include:
-      file: db/changelog/003-update-role.yaml  # Добавляем новый файл
+      file: db/changelog/003-update-role.yaml
+  - include:
+      file: db/changelog/004-add-coffees.yaml
