--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,33 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.5</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:17-jre-alpine</image>
+                    </from>
+                    <to>
+                        <image>docker.io/midzaru2011/coffeeandtea:latest</image>
+<!--                        <auth>-->
+<!--                            <serverId>registry.hub.docker.com</serverId>-->
+<!--                        </auth>-->
+                    </to>
+                    <container>
+                        <mainClass>ru.intf.sasha.CoffeeAppApplication</mainClass> <!-- Укажите основной класс -->
+                        <ports>
+                            <port>8081</port>
+                        </ports>
+<!--                        <entrypoint>-->
+<!--                            <arg>java</arg>-->
+<!--                            <arg>-jar</arg>-->
+<!--&lt;!&ndash;                            <arg>/app/CoffeAndTea-2.0.1.jar</arg>&ndash;&gt;-->
+<!--                        </entrypoint>-->
+                    </container>
+                </configuration>
+            </plugin>
 <!--            <plugin>-->
 <!--                <groupId>org.apache.maven.plugins</groupId>-->
 <!--                <artifactId>maven-jar-plugin</artifactId>-->
