--- a/coffee-and-tea.yaml
+++ b/coffee-and-tea.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   name: coffee-and-tea-config
 data:
-  SPRING_DATASOURCE_URL: "jdbc:postgresql://158.160.101.226:5432/CoffeeAndTea"
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://51.250.0.205:5432/CoffeeAndTea"
   SPRING_DATASOURCE_USERNAME: "sasha"
 
 ---
@@ -22,7 +22,7 @@ kind: Deployment
 metadata:
   name: coffee-and-tea-app
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: coffee-and-tea
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: coffee-and-tea
-        image: midzaru2011/coffee-and-tea-app:1.0.1
+        image: midzaru2011/coffee-and-tea-app:2.0.1
         env:
         - name: SPRING_DATASOURCE_URL
           valueFrom:
@@ -51,7 +51,7 @@ spec:
               name: db-secret
               key: POSTGRES_PASSWORD
         ports:
-        - containerPort: 8081
+        - containerPort: 8082
 
 ---
 apiVersion: v1
@@ -63,6 +63,7 @@ spec:
   selector:
     app: coffee-and-tea
   ports:
-  - port: 8081
-    targetPort: 8081
+  - port: 8082
+    targetPort: 8082
+  sessionAffinity: ClientIP
 
