--- a/coffee-and-tea/templates/service.yaml
+++ b/coffee-and-tea/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "coffee-and-tea.fullname" . }}
-  labels:
-    {{- include "coffee-and-tea.labels" . | nindent 4 }}
+  name: {{ .Release.Name }}-service
 spec:
   type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "coffee-and-tea.selectorLabels" . | nindent 4 }}
+    app: {{ .Release.Name }}
+  ports:
+  - port: {{ .Values.service.port }}
+    targetPort: {{ .Values.service.targetPort }}
+  sessionAffinity: {{ .Values.service.sessionAffinity }}
