modified:   coffee-and-tea/coffee-and-tea-0.2.0.tgz

--- a/coffee-and-tea/values.yaml
+++ b/coffee-and-tea/values.yaml
@@ -4,7 +4,7 @@ springDatasource:
   username: "sasha"
 
 # Настройки Secret
-postgresPassword: "password"
+postgresPassword: ""
 
 # Настройки Deployment
 replicaCount: 3
