--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,22 @@ logging.level.org.springframework.security=DEBUG
 
 logging.level.ru.intf.sasha=DEBUG
 #
-spring.datasource.url=jdbc:postgresql://localhost:5432/CoffeeAndTea
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/coffeeandtea
+spring.datasource.username=admin
+spring.datasource.password=password
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.port=8082
+server.port = 8443
+#server.ssl.key-store = keystore.jks
+#server.ssl.key-alias = tomcat
+#server.ssl.key-store-password = {$password}
+#server.ssl.keyStoreType = JKS
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
+server.tomcat.remote-ip-header=x-forwarded-for
+server.tomcat.protocol-header=x-forwarded-proto
+spring.security.secure-channel.use-header-values=true
+spring.mvc.async.request-timeout=0
+server.tomcat.use-relative-redirects=false
 #spring.liquibase.drop-first=true
