--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ logging.level.org.springframework.security=DEBUG
 logging.level.ru.intf.sasha=DEBUG
 #
 spring.datasource.url=jdbc:postgresql://localhost:5432/coffeeandtea
-spring.datasource.username=admin
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=admin
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.port = 8443
+server.port = 8081
 #server.ssl.key-store = keystore.jks
 #server.ssl.key-alias = tomcat
 #server.ssl.key-store-password = {$password}
@@ -19,7 +19,10 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
 server.tomcat.remote-ip-header=x-forwarded-for
 server.tomcat.protocol-header=x-forwarded-proto
-spring.security.secure-channel.use-header-values=true
+# spring.security.secure-channel.use-header-values=true
+spring.security.enabled=false
 spring.mvc.async.request-timeout=0
 server.tomcat.use-relative-redirects=false
 #spring.liquibase.drop-first=true
+gigachat.client.id=
+gigachat.client.secret=
