--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ server.tomcat.use-relative-redirects=false
 #spring.liquibase.drop-first=true
 gigachat.client.id=
 gigachat.client.secret=
+spring.kafka.bootstrap-servers=158.160.62.181:9092
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.auto-offset-reset=earliest
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
