--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -35,7 +35,7 @@ jobs:
     # 4. Обновление индекса репозитория
     - name: Update Helm Index
       run: |
-        helm repo index --url https://midzaru2011.github.io/helm-charts/ .
+        helm repo index --url https://midzaru2011.github.io/CoffeeAndTea/ .
 
     # 5. Загрузка файлов в GitHub Pages
     - name: Commit and Push Changes
@@ -44,4 +44,4 @@ jobs:
         git config --global user.email "actions@github.com"
         git add .
         git commit -m "Automated update of Helm Chart and index.yaml" || echo "No changes to commit"
-        git push git@github.com:Midzaru2011/helm-charts.git main
+        git push git@github.com:Midzaru2011/CoffeeAndTea.git main
