modified:   coffee-and-tea/values.yaml

--- a/coffee-and-tea/values.yaml
+++ b/coffee-and-tea/values.yaml
@@ -1,6 +1,6 @@
 # Настройки ConfigMap
 springDatasource:
-  url: "jdbc:postgresql://localhost/CoffeeAndTea"
+  url: "jdbc:postgresql://127.0.0.1/CoffeeAndTea"
   username: "sasha"
 
 # Настройки Secret
